Limpia el repositorio de archivos .db y __pycache__

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-    <nav class="navbar">
+   <nav class="navbar">
         <a href="index.html" class="logo">
          <img src="img/logo-hotel-paraiso.png" alt="Logo Hotel Paraíso">
          </a>
         <ul class="nav-links">
-            <li><a href="profile.html">Mi Perfil</a></li>
+            
+            <li><span class="navbar-text">Administración</span></li>
+            
             <li id="nav-logout"><a href="#" class="btn btn-secondary">Cerrar Sesión</a></li>
         </ul>
     </nav>
